# GreenSloth

./: README.md  pyproject.toml
.github/: dependabot.yml
docs/design/: Maja_Zhu_2009.ipynb
models/: README.md  pyproject.toml
models/Zhu2013/model/: model.py
models/src/Bellasio2019/: README.md
models/src/Bellasio2019/model/: mxlbrickswriter.py
models/src/Fuente2024/model/: mxlbrickswriter.py
models/src/Li2021/: README.md  README_script.py
models/src/ePhotosynthesis/: model.py
utils/: pyproject.toml
utils/src/GreenSlothUtils/: utils.py
utils/src/GreenSlothUtils/demonstration/: day_simulation.py  fitting.py  inject_fvcb.py  pam_fig.py  photosynthesis_mca.py  utils.py
utils/src/GreenSlothUtils/modelinit/: README_script.py
