[project]
name = "green-sloth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "GreenSlothUtils",
    "ipykernel>=7.2.0",
    "mdutils>=1.8.1",
    "mxlbricks>=1.0.0",
]

[tool.uv]
exclude-newer = "3 days"

[tool.uv.sources]
GreenSlothUtils = { git = "https://github.com/ElouenCorvest/GreenSlothUtils.git" }
